# laminr

./: .gitignore  CITATION.cff  Dockerfile  LICENSE.md  README.md  docker-compose.yml  environment.yml  planned_folder_structure.md  pyproject.toml  requirements.txt  requirements_colab.txt
examples/: colab_quick_start.ipynb
notebooks/: demo.ipynb  ideal_api.ipynb  playground.ipynb
src/: README.md
src/featurevis/: ops.py
src/laminr/: __init__.py  contrastive_loss.py  coordinate_transforms.py  inr.py  inv_temp_learn_match.py
src/laminr/neuron_models/: __init__.py  monkey.py  monkey_model_utils.py  simulated.py  utils.py
src/laminr/neuron_models/utils/: monkey_model.py  simulated_model.py
src/laminr/utils/: __init__.py  general.py  img_similarity_metrics.py  img_transforms.py  mask.py  mei.py  training.py
src/neuralpredictors/data/: transforms.py
src/neuralpredictors/layers/cores/: conv2d.py
src/neuralpredictors/layers/readouts/: gaussian.py  old_readouts.py
