[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laminr"
version = "0.0.5"
description = "Learning and Aligning Manifolds using Implicit Neural Representations."
readme = "README.md"
authors = [
    {name = "Mohammad Bashiri", email = "mohammadbashiri93@gmail.com"},
    {name = "Luca Baroni", email = "loocabaroni@gmail.com"},
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "torch>=1.13.1",
    "torchvision",
    "numpy>=1.21,<2.0",
    "huggingface_hub>=0.28.1",
    "scikit-image>=0.19.1",
    "scipy>=1.7",
    "lipstick>=0.0.7",
    "matplotlib>=3.4.3"
]

[project.optional-dependencies]
colab = [
    "lipstick>=0.0.7"
]

[project.urls]
Homepage = "https://github.com/sinzlab/laminr"
Repository = "https://github.com/sinzlab/laminr"
Documentation = "https://github.com/sinzlab/laminr"
Issues = "https://github.com/sinzlab/laminr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    'ignore::DeprecationWarning',
]
